--- a/myportfolio/static/css/style.css
+++ b/myportfolio/static/css/style.css
@@ -19,6 +19,8 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    scrollbar-color: red black;
+    scrollbar-width: thin;
 }
 
 body {
@@ -291,24 +293,36 @@ footer .nav-link:hover {
 
 #proyectos .postcard {
     display: flex;
-    background-color: #18151f;
+    background: linear-gradient(to right, #0F0F0F, #101012, #1c0101);
     border-radius: 15px;
     overflow: hidden;
     margin-bottom: 2rem;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
+    position: relative;
+}
+
+#proyectos .postcard:hover {
+    box-shadow: 0 6px 20px rgba(215, 35, 35, 0.4);
 }
 
 #proyectos .postcard__img_link {
     display: contents;
 }
 
-#proyectos .postcard__img {
-    max-height: 180px;
-    width: 100%;
+#proyectos .postcard__img_left {
+    max-height: 100%;
+    width: 40%;
     object-fit: cover;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); /* Recorte diagonal */
-    transition: transform 0.3s ease-in-out;
+    clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+}
+
+#proyectos .postcard__img_right {
+    max-height: 100%;
+    width: 40%;
+    object-fit: cover;
+    position: relative;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
 }
 
 #proyectos .postcard:hover .postcard__img {
@@ -359,11 +373,16 @@ footer .nav-link:hover {
 
 #proyectos .postcard__tagbox {
     display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.5rem;
 }
 
-#proyectos .tag__item {
+#proyectos .postcard__tagbox a {
+    text-decoration: none;
+}
+
+#proyectos .postcard__tagbox .tag__item {
     font-size: 0.9rem;
     color: #fff;
     display: inline-flex;
@@ -375,12 +394,16 @@ footer .nav-link:hover {
     cursor: pointer;
     user-select: none;
     transition: background-color 0.3s ease;
-    margin-bottom: 1.5rem;
 }
 
-#proyectos .tag__item:hover {
+#proyectos .postcard__tagbox .tag__item:hover {
     background-color: #D72323;
     color: #fff;
+}
+
+#proyectos .postcard__tagbox .tipo-proyecto {
+    margin-left: auto;
+    font-weight: bold;
 }
 
 #proyectos .tag__item i {
