--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -59,21 +59,28 @@
             <!-- Tarjeta Proyecto 1 -->
             <article class="postcard">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="https://picsum.photos/800/400" alt="Proyecto 1">
+                    <img class="postcard__img_left" src="{% static 'images/proyectos/blogangela.png' %}" alt="Blog">
                 </a>
                 <div class="postcard__text">
-                    <h1 class="postcard__title">Proyecto 1</h1>
+                    <h1 class="postcard__title">Blog Capstone Project</h1>
                     <div class="postcard__subtitle">
-                        <i class="fas fa-calendar-alt"></i> Enero, 2023
+                        <i class="fas fa-calendar-alt"></i> Agosto, 2024
                     </div>
                     <div class="postcard__bar"></div>
                     <p class="postcard__preview-txt">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid asperiores commodi corporis eius eligendi enim est eum eveniet impedit laboriosam, magni, nemo nostrum quae quasi quis tempora ullam vero.
-                    </p>
-                    <div class="postcard__tagbox">
-                        <span class="tag__item"><i class="fas fa-tag"></i> Backend</span>
-                        <span class="tag__item"><i class="fas fa-clock"></i> 3 meses</span>
-                        <a href="#" class="tag__item"><i class="fab fa-github"></i> Ver en GitHub</a>
+                        Un proyecto completo de desarrollo de un blog usando Python, Flask, RESTful Routing y SQLAlchemy. Implementación de autenticación, publicación, edición y borrado de entradas (añadiendo permisos específicos de admin y usuarios) y gestión de bases de datos.                     </p>
+                    <div class="postcard__tagbox d-flex justify-content-between">
+                        <div class="d-flex gap-3">
+                            <a href="#" class="tag__item">
+                                <i class="fas fa-link"></i> Live Preview
+                            </a>
+                            <a href="#" class="tag__item">
+                                <i class="fab fa-github"></i> GitHub Code
+                            </a>
+                        </div>
+                        <div class="tag__item tipo-proyecto">
+                            <i class="fas fa-tag"></i> Backend
+                        </div>
                     </div>
                 </div>
             </article>
@@ -81,7 +88,7 @@
             <!-- Tarjeta Proyecto 2 -->
             <article class="postcard">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="https://picsum.photos/800/400" alt="Proyecto 2">
+                    <img class="postcard__img_right" src="https://picsum.photos/800/400" alt="Proyecto 2">
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title">Proyecto 2</h1>
@@ -92,10 +99,19 @@
                     <p class="postcard__preview-txt">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid asperiores commodi corporis eius eligendi enim est eum eveniet impedit laboriosam, magni, nemo nostrum quae quasi quis tempora ullam vero.
                     </p>
-                    <div class="postcard__tagbox">
-                        <span class="tag__item"><i class="fas fa-tag"></i> Web</span>
-                        <span class="tag__item"><i class="fas fa-clock"></i> 2 meses</span>
-                        <a href="#" class="tag__item"><i class="fab fa-github"></i> Ver en GitHub</a>
+                    <div class="postcard__tagbox d-flex justify-content-between">
+                        <div class="d-flex gap-3">
+                            <a href="#" class="tag__item">
+                                <i class="fas fa-link"></i> Live Preview
+                            </a>
+                            <a href="#" class="tag__item">
+                                <i class="fab fa-github"></i> GitHub Code
+                            </a>
+                        </div>
+                        <!-- Derecha: Backend/Website/Game -->
+                        <div class="tag__item tipo-proyecto">
+                            <i class="fas fa-tag"></i> Website
+                        </div>
                     </div>
                 </div>
             </article>
@@ -103,7 +119,7 @@
             <!-- Tarjeta Proyecto 3 -->
             <article class="postcard">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="https://picsum.photos/800/400" alt="Proyecto 3">
+                    <img class="postcard__img_left" src="https://picsum.photos/800/400" alt="Proyecto 3">
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title">Proyecto 3</h1>
@@ -114,10 +130,18 @@
                     <p class="postcard__preview-txt">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid asperiores commodi corporis eius eligendi enim est eum eveniet impedit laboriosam, magni, nemo nostrum quae quasi quis tempora ullam vero.
                     </p>
-                    <div class="postcard__tagbox">
-                        <span class="tag__item"><i class="fas fa-tag"></i> Games</span>
-                        <span class="tag__item"><i class="fas fa-clock"></i> 4 meses</span>
-                        <a href="#" class="tag__item"><i class="fab fa-github"></i> Ver en GitHub</a>
+                    <div class="postcard__tagbox d-flex justify-content-between">
+                        <div class="d-flex gap-3">
+                            <a href="#" class="tag__item">
+                                <i class="fas fa-link"></i> Live Preview
+                            </a>
+                            <a href="#" class="tag__item">
+                                <i class="fab fa-github"></i> GitHub Code
+                            </a>
+                        </div>
+                        <div class="tag__item tipo-proyecto">
+                            <i class="fas fa-tag"></i> Game
+                        </div>
                     </div>
                 </div>
             </article>
