particles OUT & "disponible para trabajar"

--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -42,6 +42,15 @@
                             <span class="email mt-1">kikoamarillo94@gmail.com</span>
                         </div>
                     </div>
+                    <div class="d-flex justify-content-center mt-3">
+                         <button class="btn btn-neon">
+                             <span></span>
+                             <span></span>
+                             <span></span>
+                             <span></span>
+                           Disponible para trabajar
+                        </button>
+                    </div>
                 </div>
             </div>
             <!--<div class="frase-celebre">
