--- a/myportfolio/static/css/style.css
+++ b/myportfolio/static/css/style.css
@@ -105,6 +105,116 @@ footer .nav-link:hover {
   box-shadow: #222 1px 0 10px;
 }
 
+:root {
+    --btn-red-color: #D72323;
+    --btn-duration: 2s; /* Tiempo total para una vuelta completa */
+}
+
+.btn-neon {
+    position: relative;
+    padding: 15px 30px;
+    font-size: 10px;
+    border-width: 0;
+    border-radius: 5px;
+    background-color: transparent;
+    color: var(--btn-red-color);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    overflow: hidden;
+    cursor: pointer;
+    margin: 10px;
+    transition: all 0.25s;
+}
+
+.btn-neon span {
+    position: absolute;
+    display: block;
+    background: linear-gradient(90deg, transparent 30%, var(--btn-red-color));
+    animation-duration: var(--btn-duration);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.btn-neon span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    animation-name: btn-neon-top;
+    animation-delay: 0s; /* Sin retraso */
+}
+
+.btn-neon span:nth-child(2) {
+    right: 0;
+    top: -100%;
+    width: 2px;
+    height: 100%;
+    animation-name: btn-neon-right;
+    animation-delay: calc(var(--btn-duration) / 4); /* Empieza después de un cuarto del tiempo */
+}
+
+.btn-neon span:nth-child(3) {
+    right: -100%;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    animation-name: btn-neon-bottom;
+    animation-delay: calc(var(--btn-duration) / 4 * 2); /* Empieza en la mitad */
+}
+
+.btn-neon span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    animation-name: btn-neon-left;
+    animation-delay: calc(var(--btn-duration) / 4 * 3); /* Empieza después de tres cuartos */
+}
+
+.btn-neon:hover {
+    background-color: var(--btn-red-color);
+    color: #151515;
+    box-shadow: 0 0 10px var(--btn-red-color),
+                0 0 30px var(--btn-red-color),
+                0 0 50px var(--btn-red-color);
+}
+
+@keyframes btn-neon-top {
+    from {
+        left: -100%;
+    }
+    to {
+        left: 100%;
+    }
+}
+
+@keyframes btn-neon-right {
+    from {
+        top: -100%;
+    }
+    to {
+        top: 100%;
+    }
+}
+
+@keyframes btn-neon-bottom {
+    from {
+        right: -100%;
+    }
+    to {
+        right: 100%;
+    }
+}
+
+@keyframes btn-neon-left {
+    from {
+        bottom: -100%;
+    }
+    to {
+        bottom: 100%;
+    }
+}
+
 /* ---------------------- NAVBAR ---------------------- */
 .logotype {
     font-size: 1.5rem;
@@ -146,37 +256,6 @@ footer .nav-link:hover {
 }
 
 /* ---------------------- INDEX ---------------------- */
-/* -------- particles.js container -------- */
-#particles-js {
-    position: absolute;
-    top: -150px;
-    left: 0;
-    z-index: -1;
-    width: 100vw;
-    height: calc(100% + 150px);
-    background-color: #111;
-    pointer-events: none;
-}
-.count-particles {
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13E8E9;
-    font-size: .8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-}
-
-.js-count-particles {
-    font-size: 1.1em;
-}
-
 /* -------- Sección SOBRE-MÍ -------- */
 #sobre-mi {
     position: relative;
