--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -33,10 +33,10 @@
                 <a class="nav-link" href="#">Proyectos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Stack</a>
+                <a class="nav-link" href="#">Conocimientos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Experiencia</a>
+                <a class="nav-link" href="#">Sobre mí</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
@@ -66,10 +66,10 @@
                     <a class="nav-link" href="#">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Stack</a>
+                    <a class="nav-link" href="#">Conocimientos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Experiencia</a>
+                    <a class="nav-link" href="#">Sobre mí</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
